	visiting a timeline.
	(twittering-lookup-http-start-function): do not retry finding
	connection-method with compromise. It is assumed that an available
	connection method is already determined here.
	(twittering-ensure-connection-method): new function.
	(twittering-visit-timeline): ensure that an available connection
	method is determined.

2010-09-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Add an edited tweet into the history without
	text properties.
	(twittering-edit-extract-status): extract a status without text
	properties. They may cause `session.el' to fail to save
	`twittering-edit-history' because
	`twittering-make-clickable-status-datum' adds text properties with
	self-reference to tweets.

	* twittering-mode.el (twittering-auth-method): fix docstring.
	(twittering-timeline-spec-alias): likewise.

2010-09-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-push-uri-onto-kill-ring): avoid
	pushing the same URL repeatedly.

	* twittering-mode.el: Fix xAuth with `gnutls-cli'.
	(twittering-oauth-get-token-alist-native): add a CRLF following
	the POST body. `gnutls-cli', which may be invoked by
	`open-tls-stream', requires the CRLF at the end of input.

	* twittering-mode.el: Introduce `connection-info', which is
	transferred to a sentinel.
	(twittering-start-http-session): introduce the variable
	`connection-info' to transfer the connection information to a
	sentinel. Since `connection-info' includes `noninteractive', the
	argument `noninteractive' is replaced with `connection-info'.
	(twittering-start-http-session-curl): likewise.
	(twittering-start-http-session-native): likewise.
	(twittering-http-default-sentinel): use `connection-info' instead
	of the current `twittering-use-ssl' and `twittering-proxy-use'.

	* twittering-mode.el (twittering-http-post): remove use of unbound
	variable `noninteractive'.

	* twittering-mode.el (twittering-call-api): use the argument
	`noninteractive' correctly.
