@@ -4244,6 +4244,61 @@ The result alist includes the following keys, where a key is a symbol.
       (header-list . ,header-list)
       (post-body . ,post-body))))
 
+(defun twittering-make-connection-info (use-ssl &optional additional)
+  "Make an alist specifying the connection method.
+SSL is enabled if USE-SSL is non-nil.
+The result alist is a list of (SYMBOL-OF-PARAMETER . VALUE).
+
+ADDITIONAL is appended to the tail of the result alist.
+Following ADDITIONAL, an entry in `twittering-connection-type-table' is
+also appended to the result alist, where the entry is determined by
+`twittering-lookup-connection-type'.
+
+The parameter symbols are following:
+  use-ssl: whether SSL is enabled or not.
+  allow-insecure-server-cert: non-nil if an insecure server certificate is
+    allowed on SSL.
+  cacert-fullpath: the full-path of the certificate authorizing a server
+    certificate on SSL.
+  use-proxy: non-nil if using a proxy.
+  proxy-server: a proxy server or nil.
+  proxy-port: a port for connecting the proxy (integer) or nil.
+  proxy-user: a username for connecting the proxy or nil.
+  proxy-password: a password for connecting the proxy or nil."
+  (let ((entry (twittering-lookup-connection-type use-ssl))
+	(scheme (if use-ssl
+		    "https"
+		  "http")))
+    `((use-ssl . ,use-ssl)
+      (allow-insecure-server-cert
+       . ,twittering-allow-insecure-server-cert)
+      (cacert-fullpath
+       . ,(when use-ssl (twittering-ensure-ca-cert)))
+      (use-proxy . ,twittering-proxy-use)
+      ,@(when twittering-proxy-use
+	  `((proxy-server . ,(twittering-proxy-info scheme 'server))
+	    (proxy-port . ,(twittering-proxy-info scheme 'port))
+	    (proxy-user . ,(if use-ssl
+			       twittering-https-proxy-user
+			     twittering-http-proxy-user))
+	    (proxy-password . ,(if use-ssl
+				   twittering-https-proxy-password
+				 twittering-http-proxy-password))))
+      ,@additional
+      ,@entry)))
+
+(defun twittering-send-http-request (request connection-info sentinel)
+  "Open a connection and return a subprocess object for the connection.
+REQUEST must be an alist that has the same keys as that generated by
+`twittering-make-http-request'.
+CONNECTION-INFO must be an alist that has the same keys as that generated by
+`twittering-make-connection-info'."
+  (let ((func (cdr (assq 'send-http-request connection-info)))
+	(temp-buffer (generate-new-buffer "*twmode-http-buffer*")))
+    (when (and func (functionp func))
+      (funcall func "*twmode-generic*" temp-buffer
+	       request connection-info sentinel))))
+
 (defun twittering-start-http-session (method headers host port path parameters &optional noninteractive sentinel clean-up-sentinel)
   "METHOD    : http method
 HEADERS   : http request headers in assoc list
@@ -4258,44 +4313,22 @@ CLEAN-UP-SENTINEL: sentinel always executed."
     (error "Unknown HTTP method: %s" method))
   (unless (string-match "^/" path)
     (error "Invalid HTTP path: %s" path))
-  (let* ((func (twittering-lookup-http-start-function
-		twittering-connection-type-order
-		twittering-connection-type-table))
-	 (entry (twittering-lookup-connection-type twittering-use-ssl))
-	 (post-body "")
-	 (request (twittering-make-http-request
-		   method headers host port path parameters post-body
-		   twittering-use-ssl))
-	 (scheme (cdr (assq 'scheme request)))
+  (let* ((post-body "")
 	 (connection-info
-	  `((use-ssl . ,twittering-use-ssl)
-	    (allow-insecure-server-cert
-	     . ,twittering-allow-insecure-server-cert)
-	    (cacert-fullpath
-	     . ,(when twittering-use-ssl (twittering-ensure-ca-cert)))
-	    (use-proxy . ,twittering-proxy-use)
-	    ,@(when twittering-proxy-use
-		`((proxy-server . ,(twittering-proxy-info scheme 'server))
-		  (proxy-port . ,(twittering-proxy-info scheme 'port))
-		  (proxy-user . ,(if (string= "http" scheme)
-				     twittering-http-proxy-user
-				   twittering-https-proxy-user))
-		  (proxy-password . ,(if (string= "http" scheme)
-					 twittering-http-proxy-password
-				       twittering-https-proxy-password))))
-	    (noninteractive . ,noninteractive)
-	    ,@entry))
-	 (temp-buffer (generate-new-buffer "*twmode-http-buffer*")))
-    (when (and func (functionp func))
-      (lexical-let ((connection-info connection-info)
-		    (clean-up-sentinel clean-up-sentinel)
-		    (sentinel sentinel))
-	(funcall func "*twmode-generic*" temp-buffer
-		 request connection-info
-		 (lambda (&rest args)
-		   (apply #'twittering-http-default-sentinel
-			  sentinel connection-info clean-up-sentinel args))
-		 )))))
+	  (twittering-make-connection-info
+	   twittering-use-ssl `((noninteractive . ,noninteractive))))
+	 (request
+	  (twittering-make-http-request method headers host port path
+					parameters post-body
+					twittering-use-ssl)))
+    (lexical-let ((connection-info connection-info)
+		  (clean-up-sentinel clean-up-sentinel)
+		  (sentinel sentinel))
+      (twittering-send-http-request
+       request connection-info
+       (lambda (&rest args)
+	 (apply #'twittering-http-default-sentinel
+		sentinel connection-info clean-up-sentinel args))))))
 
 (defvar twittering-cert-file nil)
 
